k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zion-next-app
  labels:
    app: zion-next-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zion-next-app
  template:
    metadata:
      labels:
        app: zion-next-app
    spec:
      containers:
        - name: zion-next-app
          image: zion-next-app:latest  # Jenkins에서 자동으로 커밋 해시로 업데이트됨
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
