k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zion-next-service
spec:
  type: NodePort
  selector:
    app: zion-next-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
